@@ -15,6 +15,10 @@
   added to the -d list for possible symbol/unwind data extraction,
   for simplifying profiling invocations.  Consider --ldd.
 
+- The "subbuf" size for kernel-to-user bulk message passing is fixed
+  at the page size.  Number of such subbufs is affected by the
+  stap "-s" parameter and amount of free memory available.
+
 * What's new in version 4.6, 2021-11-15
 
 - SystemTap has added support for the 64-bit RISC-V architecture.
